# mulit-agent-dev

./: .env.example  .gitignore  00-demo1.py  01-WebBaseLoader.py  02-PythonREPL.py  03-Helper-Utilities.py  04-Research Team.py  Helper-Utilities.py  LICENSE  PythonREPL.py  README.md  WebBaseLoader.py  define_agent_teams.py  demo.py  fourier_transform_demo.py  research_team.py
AI-design-mode/: AI任务异步编排.py  几个模式的组合示例.py  单例.py  状态模式.py  管道-过滤器模式.py  装饰器.py  责任链.py  适配器.py  门面模式.py
LlamaIndex/: demo.py
ai_design_mode/: 享元模式AI模型共享.py  代理模式.py  策略.py  组合模式.py  适配器2.py
asyncio-test/: asyncio-core-usage.py  demo1.py
asyncioModule/: AI-backend-async-demo.py  asyncio-core-usage.py  asyncio-demo2.py  信号量.md
crewai_src/: __init__.py
crewai_src/crewsrc/crewaidemo/: README.md  pyproject.toml
crewai_src/crewsrc/crewaidemo/src/crewaidemo/: crew.py  main.py  report.md  report2.md  report3.md  report4.md
crewai_src/crewsrc/crewaidemo/src/crewaidemo/config/: agents.yaml
crewai_src/flowsrc/guide_creator_flow/: pyproject.toml
crewai_src/flowsrc/guide_creator_flow/src/guide_creator_flow/: main.py  poem.txt  poem2.txt
crewai_src/flowsrc/guide_creator_flow/src/guide_creator_flow/crews/poem_crew/: poem_crew.py
crewai_src/flowsrc/guide_creator_flow/src/guide_creator_flow/crews/poem_crew/config/: agents.yaml
custom-pipe/: itertools-demo.py  subprocess-demo.py
custom_pipe/: __init__.py  data.txt  itertools-demo.py  subprocess-demo.py
graph/: PythonREPL.pyi  Search.py
graph-test/: Search.py
grpah-builder-api/: agent-to-img.py  to-img.py  uuid-test.py
other/: 闭包.py
(+114 files in other folders)
