[project]
name = "crewaidemo"
version = "0.1.0"
description = "crewaidemo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
crewaidemo = "crewaidemo.main:run"
run_crew = "crewaidemo.main:run"
train = "crewaidemo.main:train"
replay = "crewaidemo.main:replay"
test = "crewaidemo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
